bpo-37372: Fix error unpickling datetime.time objects from Python 2 with seconds>=24. (GH-14307) (cherry picked from commit 122376df550b71dd3bec0513c7483cc1714212fa)

Co-authored-by: Justin Blanchard <UncombedCoconut@gmail.com>